# hairloom

./: .codecov.yml  .coveragerc  .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/workflows/: check-code-coverage.yml  check-install.yml  coverage.yml  integration.yml
docs/: conf.py  hairloom.rst  index.rst  modules.rst
hairloom/: __init__.py  cli.py  collect.py  datatypes.py  utils.py
hairloom/data/: test_datatypes.fasta  test_datatypes.fasta.fai  test_reads.bam  test_reads.bam.bai  test_ref.fasta  test_ref.fasta.fai
hairloom/data/cli/: segments.txt
tests/: test_cli.py  test_collect.py  test_datatypes.py  test_utils.py
tests/cli/: breakpoints.txt  extract.txt  svs.txt
tests/scripts/: make_test_data.py
