[project]
name = "hairloom"
version = "0.1.1"
authors = [
    { name="Seongmin Choi", email="soymintc@gmail.com" },
]
description = "A package to analyze split reads of long read data"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/shahcompbio/hairloom"
Documentation = "https://readthedocs.org/projects/hairloom"
Issues = "https://github.com/shahcompbio/hairloom/issues"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# Configuration for setuptools_scm (empty for now)

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
hairloom = "hairloom.cli:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
